--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,6 +53,7 @@
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
+    --h4-font-size: 1rem;
     --normal-font-size: 1rem;
     --small-font-size: .875rem;
     --smaller-font-size: .813rem;
@@ -77,6 +78,11 @@
   margin-bottom: .3rem;
   color: var(--first-color-alt);
 }
+.progress-bar__containers {
+  flex: 0 0 100%;
+}
+.content__langs-styles, .content__db, .content__others  {
+  margin-top: 1rem;
 }
 @media screen and (min-width: 600px) {
   .container__information {
@@ -93,6 +99,10 @@
   width: 45%;
   color: var(--first-color-alt);
 }
+.progress-bar__containers {
+  flex: 0 0 50%;
+}
+
 }
 
 /*=============== BASE ===============*/
@@ -120,7 +130,7 @@ body {
   transition: .4s; /* for light mode animation */
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   color: var(--title-color);
   font-weight: var(--font-semibold);
 }
@@ -376,7 +386,8 @@ p{
 }
 .interests__content {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; 
+  justify-content: space-evenly;
 }
 .interests__item {
   display: flex;
@@ -434,6 +445,212 @@ p{
 }
 
 /*=============== SKILLS ===============*/
+.skills {
+  padding: 2rem 1rem;
+}
+.skills__container {
+  max-width: 1200px;
+  margin: auto;
+}
+.skills__content--title {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 1rem;
+}
+.skills__title {
+  font-size: var(--h1-font-size);
+}
+.skills__content--progress-bars {
+  display: flex;
+  flex-wrap: wrap;
+}
+.skills__subtitle{
+  font-size: var(--h3-font-size);
+  margin-bottom: 1rem;
+}
+.container__items{
+  margin-bottom: 1rem;
+}
+.items__title {
+  font-size: var(--h4-font-size);
+  margin-bottom: .5rem;
+}
+
+/* Progress bar */
+.skill-bar {
+  height: .5rem;
+  width: 90%;
+  background-color: hsla(var(--second-hue), 32%, 16%, .5);
+  position: relative;
+  border-radius: 2rem;
+}
+.progress-bar {
+  background-color: hsla(var(--first-hue), var(--sat), 42%, .8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: .5rem;
+  border-radius: 2rem;
+}
+.progress-bar > span {
+  position: absolute;
+  height: 2rem;
+  width: 2rem;
+  background-color: hsla(var(--first-hue), var(--sat), 42%);
+  border-radius: 50%;
+  line-height: 2rem;
+  text-align: center;
+  top: -.75rem;
+  right: -1rem;
+  font-size: var(--smaller-font-size);
+  font-weight: bold;
+  color: hsla(var(--second-hue), 32%, 16%);
+}
+.javascript {
+  width: 0;
+  animation: 2s javascript ease-in-out forwards;
+}
+@keyframes javascript {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
+}
+.typescript {
+  width: 0;
+  animation: 2s typescript ease-in-out forwards;
+}
+@keyframes typescript {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 20%;
+  }
+}
+.java {
+  width: 0;
+  animation: 2s java ease-in-out forwards;
+}
+@keyframes java {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 60%;
+  }
+}
+.php {
+  width: 0;
+  animation: 2s php ease-in-out forwards;
+}
+@keyframes php {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
+}
+.html {
+  width: 0;
+  animation: 2s html ease-in-out forwards;
+}
+@keyframes html {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+.css {
+  width: 0;
+  animation: 2s css ease-in-out forwards;
+}
+@keyframes css {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 65%;
+  }
+}
+.sass {
+  width: 0;
+  animation: 2s sass ease-in-out forwards;
+}
+@keyframes sass {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 40%;
+  }
+}
+.mysql {
+  width: 0;
+  animation: 2s mysql ease-in-out forwards;
+}
+@keyframes mysql {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 60%;
+  }
+}
+.mongodb {
+  width: 0;
+  animation: 2s mongodb ease-in-out forwards;
+}
+@keyframes mongodb {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
+}
+.figma {
+  width: 0;
+  animation: 2s figma ease-in-out forwards;
+}
+@keyframes figma {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+.git {
+  width: 0;
+  animation: 2s git ease-in-out forwards;
+}
+@keyframes git {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
+}
+.illustrator {
+  width: 0;
+  animation: 2s illustrator ease-in-out forwards;
+}
+@keyframes illustrator {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
+}
 
 
 /*=============== SERVICES ===============*/
